{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 110,
  "lineage": "ebf84ecb-8273-5b7d-1756-730b93dec0c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a7892b699121d8a",
            "arn": "arn:aws:ec2:us-west-2:565393042809:elastic-ip/eipalloc-05a7892b699121d8a",
            "domain": "vpc",
            "id": "eipalloc-05a7892b699121d8a",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-242-68-32.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.68.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0478f71a6f20177ab",
            "arn": "arn:aws:ec2:us-west-2:565393042809:elastic-ip/eipalloc-0478f71a6f20177ab",
            "domain": "vpc",
            "id": "eipalloc-0478f71a6f20177ab",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-218-125-140.us-west-2.compute.amazonaws.com",
            "public_ip": "34.218.125.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8c6b923777519db",
            "arn": "arn:aws:ec2:us-west-2:565393042809:instance/i-00b829247d3d8b583",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b829247d3d8b583",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f32aa54429e30fe",
            "private_dns": "ip-172-31-33-96.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.96",
            "public_dns": "ec2-52-33-142-197.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.142.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06284fc10abc6b687",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03538b4dcdeab6fc1",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0646bb4a433b9af21"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "us-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:internet-gateway/igw-02532ca8d44876336",
            "id": "igw-02532ca8d44876336",
            "owner_id": "565393042809",
            "tags": {
              "Name": "us-igw-dhruv"
            },
            "tags_all": {
              "Name": "us-igw-dhruv"
            },
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "dependencies": [
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-dhruv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a7892b699121d8a",
            "association_id": "eipassoc-08020786e0e9615c9",
            "connectivity_type": "public",
            "id": "nat-013b0a12eb80dfb66",
            "network_interface_id": "eni-05daf1c6d9d428c02",
            "private_ip": "10.0.3.97",
            "public_ip": "44.242.68.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-000d051d565321e3b",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0478f71a6f20177ab",
            "association_id": "eipassoc-0c3a1fd9abfa01749",
            "connectivity_type": "public",
            "id": "nat-010be20293f4862a9",
            "network_interface_id": "eni-02ee2ce58d0aab968",
            "private_ip": "10.0.4.129",
            "public_ip": "34.218.125.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010ac2fb1fc4dd164",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-rtb-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:route-table/rtb-004840026a9fe1b27",
            "id": "rtb-004840026a9fe1b27",
            "owner_id": "565393042809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-013b0a12eb80dfb66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb"
            },
            "tags_all": {
              "Name": "private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat-gw-dhruv",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:route-table/rtb-0e6f7252a63370cc5",
            "id": "rtb-0e6f7252a63370cc5",
            "owner_id": "565393042809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010be20293f4862a9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb"
            },
            "tags_all": {
              "Name": "private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat-gw-dhruv",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-rtb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:route-table/rtb-028ba197196bdc0cd",
            "id": "rtb-028ba197196bdc0cd",
            "owner_id": "565393042809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02532ca8d44876336",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.us-igw",
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43f1df661b32359",
            "route_table_id": "rtb-004840026a9fe1b27",
            "subnet_id": "subnet-000d051d565321e3b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat-gw-dhruv",
            "aws_route_table.us-west-rtb-private",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8f4a56e0c1e2aab",
            "route_table_id": "rtb-0e6f7252a63370cc5",
            "subnet_id": "subnet-010ac2fb1fc4dd164"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat-gw-dhruv",
            "aws_route_table.us-west-rtb-private",
            "aws_subnet.private_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bab9c0d70e7f73f",
            "route_table_id": "rtb-028ba197196bdc0cd",
            "subnet_id": "subnet-0016e7dc1d1da5c0b"
          },
          "dependencies": [
            "aws_internet_gateway.us-igw",
            "aws_route_table.us-west-rtb-public",
            "aws_subnet.public_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007f5db1186c3776e",
            "route_table_id": "rtb-028ba197196bdc0cd",
            "subnet_id": "subnet-0249be666fb1a1a5c"
          },
          "dependencies": [
            "aws_internet_gateway.us-igw",
            "aws_route_table.us-west-rtb-public",
            "aws_subnet.public_subnet_us-west-2",
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_us-west-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:subnet/subnet-000d051d565321e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000d051d565321e3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565393042809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet 1"
            },
            "tags_all": {
              "Name": "Private_Subnet 1"
            },
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "dependencies": [
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:subnet/subnet-010ac2fb1fc4dd164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010ac2fb1fc4dd164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565393042809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet 2"
            },
            "tags_all": {
              "Name": "Private_Subnet 2"
            },
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "dependencies": [
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us-west-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:subnet/subnet-0016e7dc1d1da5c0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016e7dc1d1da5c0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565393042809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet 1"
            },
            "tags_all": {
              "Name": "Public_Subnet 1"
            },
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "dependencies": [
            "aws_vpc.vpc-us-west-2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:subnet/subnet-0249be666fb1a1a5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0249be666fb1a1a5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "565393042809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet 2"
            },
            "tags_all": {
              "Name": "Public_Subnet 2"
            },
            "vpc_id": "vpc-0351dd59c252b8a57"
          },
          "dependencies": [
            "aws_vpc.vpc-us-west-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-us-west-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:565393042809:vpc/vpc-0351dd59c252b8a57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b65549cae5345d5f",
            "default_route_table_id": "rtb-03a7d648402376afd",
            "default_security_group_id": "sg-0646164afa79f0304",
            "dhcp_options_id": "dopt-02df2a21fd563d440",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0351dd59c252b8a57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a7d648402376afd",
            "owner_id": "565393042809",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}